<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.activity_quiz_list">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_logo"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_margin="11dp"
        app:cardCornerRadius="1000dp"
        app:cardElevation="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bontserrat_bold"
            android:gravity="center"
            android:rotation="-45"
            android:text="@string/s"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:fontFamily="@font/bontserrat_bold"
        android:text="@string/squiz"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_logo"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/card_logo"
        app:layout_constraintTop_toTopOf="@+id/card_logo" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:text="@string/logout"
        app:icon="@drawable/logout"
        app:layout_constraintBottom_toBottomOf="@+id/card_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/add_quiz"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_loading"
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:transitionName="card1"
        app:cardCornerRadius="1000dp"
        app:cardElevation="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:fontFamily="@font/bontserrat_bold"
            android:gravity="center"
            android:rotation="-45"
            android:text="@string/s"
            android:textColor="@color/black"
            android:visibility="visible"
            app:autoSizeTextType="uniform" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_no_quiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="7dp"
        android:fontFamily="@font/bontserrat_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/no_squiz_yet"
        android:textAlignment="center"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/sad"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/recyclerView"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>