<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        app:cardBackgroundColor="#EEF1FF"
        app:cardCornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_margin="17dp"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="1000dp"
                app:cardElevation="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_question_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    app:autoSizeTextType="uniform" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/dummy_question"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/text_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:background="@drawable/rounded_stroked_bg"
                android:contentDescription="@string/e_g_sheri"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="11dp"
                android:text="@string/e_g_sheri"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_question" />

            <TextView
                android:id="@+id/text_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:background="@drawable/rounded_stroked_bg"
                android:contentDescription="@string/e_g_jimmy"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="11dp"
                android:text="@string/e_g_jimmy"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_option1" />

            <TextView
                android:id="@+id/text_option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:background="@drawable/rounded_stroked_bg"
                android:contentDescription="@string/e_g_annie"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="11dp"
                android:text="@string/e_g_annie"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_option2" />

            <TextView
                android:id="@+id/text_option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:background="@drawable/rounded_stroked_bg"
                android:contentDescription="@string/e_g_sheri"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="11dp"
                android:text="@string/e_g_sheri"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_option3" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>