<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_logo"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_margin="11dp"
        app:cardCornerRadius="1000dp"
        app:cardElevation="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bontserrat_bold"
            android:gravity="center"
            android:rotation="-45"
            android:text="@string/s"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:fontFamily="@font/bontserrat_bold"
        android:text="@string/squiz"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_logo"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/card_logo"
        app:layout_constraintTop_toTopOf="@+id/card_logo" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:enabled="false"
        android:fontFamily="@font/bontserrat_bold"
        android:text="@string/create_quiz"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_logo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="17dp"
                app:cardBackgroundColor="#dddddd"
                app:cardCornerRadius="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="11dp"
                        android:fontFamily="@font/bontserrat_bold"
                        android:text="question:"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginEnd="11dp"
                        android:drawableStart="@drawable/question_mark"
                        android:drawablePadding="7dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="e.g. who is naruto?"
                        android:textSize="13sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/text_option1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:fontFamily="@font/bontserrat_bold"
                        android:text="option 1:"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="@+id/editText"
                        app:layout_constraintTop_toBottomOf="@+id/editText" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginEnd="11dp"
                        android:drawableStart="@drawable/question_mark"
                        android:drawablePadding="7dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="e.g. x"
                        android:textSize="13sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_option1" />

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/this_is_the_answer"
                        android:textStyle="bold|italic"
                        app:layout_constraintStart_toStartOf="@+id/editText2"
                        app:layout_constraintTop_toBottomOf="@+id/editText2" />


                    <TextView
                        android:id="@+id/text_option2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bontserrat_bold"
                        android:text="option 2:"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="@+id/checkBox1"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginEnd="11dp"
                        android:drawableStart="@drawable/question_mark"
                        android:drawablePadding="7dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="e.g. y"
                        android:textSize="13sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_option2" />


                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/this_is_the_answer"
                        android:textStyle="bold|italic"
                        app:layout_constraintStart_toStartOf="@+id/editText4"
                        app:layout_constraintTop_toBottomOf="@+id/editText4" />

                    <TextView
                        android:id="@+id/text_option3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bontserrat_bold"
                        android:text="option 3:"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="@+id/checkBox2"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginEnd="11dp"
                        android:drawableStart="@drawable/question_mark"
                        android:drawablePadding="7dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="e.g. z"
                        android:textSize="13sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_option3" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/this_is_the_answer"
                        android:textStyle="bold|italic"
                        app:layout_constraintStart_toStartOf="@+id/editText3"
                        app:layout_constraintTop_toBottomOf="@+id/editText3" />

                    <TextView
                        android:id="@+id/text_option4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bontserrat_bold"
                        android:text="option 4:"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="@+id/checkBox3"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginEnd="11dp"
                        android:drawableStart="@drawable/question_mark"
                        android:drawablePadding="7dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="e.g. x"
                        android:textSize="13sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_option4" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/this_is_the_answer"
                        android:textStyle="bold|italic"
                        app:layout_constraintStart_toStartOf="@+id/editText5"
                        app:layout_constraintTop_toBottomOf="@+id/editText5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        app:tint="@color/white"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="see question(s)"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/bontserrat_bold"
        android:text="0"
        android:layout_marginStart="3dp"
        android:textColor="#FF0000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>